<?xml version="1.0"?>
<package>
  <name>ati_ft_sensor</name>
  <version>1.0.0</version>
  <description>sl</description>
  <license>TODO</license>
  <author email="ludovic.righetti@tuebingen.mpg.de">Ludovic Righetti</author>
  <maintainer email="aherzog@tuebingen.mpg.de">Alexander Herzog</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> real_time_tools </build_depend>
  <run_depend>   real_time_tools </run_depend>

  <export>
  </export>
</package>
